<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.SellerAboutActivity">
    <ImageView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FF8F00"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="310dp"
        android:background="#00000000"
        android:contentDescription="TODO"
        android:minWidth="48dp"
        android:onClick="selleraboutback"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/orderimg"
                    android:contentDescription="TODO" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:justificationMode="inter_word"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lessons from History for Online Grocery :"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about1"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Early Explorers :"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about2"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about3"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about4"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about5"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about6"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Modern Day :"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about7"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about8"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about9"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about10"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="© Copyright 2023, All Rights Reserved"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/alice"
                    android:textSize="15sp"
                    android:layout_marginTop="40dp"
                    android:inputType="text"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>